2003-12-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add dependencies to $(ARCH)/$(dirstamp).
	Reformat.

2003-12-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Remove all-local: $(ARCH).

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* rtems/no-dpmem.c, rtems/no-event.c, rtems/no-mp.c, rtems/no-msg.c,
	rtems/no-part.c, rtems/no-region.c, rtems/no-rtmon.c, rtems/no-sem.c,
	rtems/no-signal.c, rtems/no-timer.c, sapi/no-ext.c, sapi/no-io.c: URL
	for license changed.

2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved automake/.

2003-07-10	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove (Merged into ../configure.ac).
	* Makefile.am:
	Reflect having merged configure.ac into ../configure.ac

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2003-02-03	Joel Sherrill <joel@OARcorp.com>

	PR 338/filesystem
	* sapi/no-io.c: Side-effect of fixing reentrancy problem with 
	rtems_io_lookup_name() (API change).  Unused function removed.

2002-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Apply install-data-local to install *.rels.

2002-12-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Eliminate *_O_FILES.
	Don't create $ARCH in %.o: %.c rules.

2002-12-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use .$(OBJEXT) instead of .o.

2002-12-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Introduce sapi_C_FILES, rtems_C_FILES.

2002-12-07	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Don't include @RTEMS_BSP@.cfg.

2002-12-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_CHECK_BSP_CACHE.

2002-11-20	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
