@@ -11,38 +11,82 @@ OBJS = $(sapi_C_FILES:sapi/%.c=$(ARCH)/%.$(OBJEXT))
 rtems_C_FILES = rtems/no-dpmem.c rtems/no-event.c rtems/no-msg.c \
     rtems/no-mp.c rtems/no-part.c rtems/no-region.c rtems/no-rtmon.c \
     rtems/no-sem.c rtems/no-signal.c rtems/no-timer.c
-OBJS += $(rtems_C_FILES:rtems/%.c=${ARCH}/%.$(OBJEXT))
+OBJS += $(rtems_C_FILES:rtems/%.c=$(ARCH)/%.$(OBJEXT))
 
 PGMS = $(rtems_C_FILES:rtems/%.c=$(ARCH)/%$(LIB_VARIANT).rel)
 PGMS += $(sapi_C_FILES:sapi/%.c=$(ARCH)/%$(LIB_VARIANT).rel)
 
-${ARCH}/%.$(OBJEXT): sapi/%.c $(ARCH)/$(dirstamp)
+$(ARCH)/%.$(OBJEXT): sapi/%.c $(ARCH)/$(dirstamp)
 	${COMPILE} -o $@ -c $<
 
-${ARCH}/%.$(OBJEXT): rtems/%.c $(ARCH)/$(dirstamp)
+$(ARCH)/%.$(OBJEXT): rtems/%.c $(ARCH)/$(dirstamp)
 	${COMPILE} -o $@ -c $<
 
 # Make foo.rel from foo.o
-${ARCH}/%$(LIB_VARIANT).rel: ${ARCH}/%.o
+$(ARCH)/%$(LIB_VARIANT).rel: $(ARCH)/%.o
 	${make-rel}
 
-TMPINSTALL_FILES += \
-    $(PGMS:${ARCH}/%$(LIB_VARIANT).rel=$(PROJECT_RELEASE)/lib/%$(LIB_VARIANT).rel)
-
-$(PROJECT_RELEASE)/lib/%$(LIB_VARIANT).rel: $(ARCH)/%$(LIB_VARIANT).rel
-	$(INSTALL_DATA) $< $@
+project_libdir = $(libdir)
+project_lib_DATA = $(ARCH)/no-ext$(LIB_VARIANT).rel \
+    $(ARCH)/no-io$(LIB_VARIANT).rel $(ARCH)/no-dpmem$(LIB_VARIANT).rel \
+    $(ARCH)/no-event$(LIB_VARIANT).rel $(ARCH)/no-msg$(LIB_VARIANT).rel \
+    $(ARCH)/no-mp$(LIB_VARIANT).rel $(ARCH)/no-part$(LIB_VARIANT).rel \
+    $(ARCH)/no-region$(LIB_VARIANT).rel $(ARCH)/no-rtmon$(LIB_VARIANT).rel \
+    $(ARCH)/no-sem$(LIB_VARIANT).rel $(ARCH)/no-signal$(LIB_VARIANT).rel \
+    $(ARCH)/no-timer$(LIB_VARIANT).rel
 
 all-local: $(PGMS) $(TMPINSTALL_FILES)
-
-install-data-local: $(PGMS)
-	@$(mkinstalldirs) $(DESTDIR)$(bsplibdir)
-	@list='$(PGMS)'; for p in $$list; do \
-	  echo "$(INSTALL_DATA) $$p $(DESTDIR)$(bsplibdir)" ; \
-	  $(INSTALL_DATA) $$p $(DESTDIR)$(bsplibdir); \
-	done
 
 .PRECIOUS: $(PGMS) $(OBJS)
 
 EXTRA_DIST = $(rtems_C_FILES) $(sapi_C_FILES)
+
+${PROJECT_RELEASE}/lib/no-ext$(LIB_VARIANT).rel: $(ARCH)/no-ext$(LIB_VARIANT).rel ${PROJECT_RELEASE}/lib/$(dirstamp)
+	$(INSTALL_DATA) $< ${PROJECT_RELEASE}/lib/no-ext$(LIB_VARIANT).rel
+TMPINSTALL_FILES += ${PROJECT_RELEASE}/lib/no-ext$(LIB_VARIANT).rel
+
+${PROJECT_RELEASE}/lib/no-io$(LIB_VARIANT).rel: $(ARCH)/no-io$(LIB_VARIANT).rel ${PROJECT_RELEASE}/lib/$(dirstamp)
+	$(INSTALL_DATA) $< ${PROJECT_RELEASE}/lib/no-io$(LIB_VARIANT).rel
+TMPINSTALL_FILES += ${PROJECT_RELEASE}/lib/no-io$(LIB_VARIANT).rel
+
+${PROJECT_RELEASE}/lib/no-dpmem$(LIB_VARIANT).rel: $(ARCH)/no-dpmem$(LIB_VARIANT).rel ${PROJECT_RELEASE}/lib/$(dirstamp)
+	$(INSTALL_DATA) $< ${PROJECT_RELEASE}/lib/no-dpmem$(LIB_VARIANT).rel
+TMPINSTALL_FILES += ${PROJECT_RELEASE}/lib/no-dpmem$(LIB_VARIANT).rel
+
+${PROJECT_RELEASE}/lib/no-event$(LIB_VARIANT).rel: $(ARCH)/no-event$(LIB_VARIANT).rel ${PROJECT_RELEASE}/lib/$(dirstamp)
+	$(INSTALL_DATA) $< ${PROJECT_RELEASE}/lib/no-event$(LIB_VARIANT).rel
+TMPINSTALL_FILES += ${PROJECT_RELEASE}/lib/no-event$(LIB_VARIANT).rel
+
+${PROJECT_RELEASE}/lib/no-msg$(LIB_VARIANT).rel: $(ARCH)/no-msg$(LIB_VARIANT).rel ${PROJECT_RELEASE}/lib/$(dirstamp)
+	$(INSTALL_DATA) $< ${PROJECT_RELEASE}/lib/no-msg$(LIB_VARIANT).rel
+TMPINSTALL_FILES += ${PROJECT_RELEASE}/lib/no-msg$(LIB_VARIANT).rel
+
+${PROJECT_RELEASE}/lib/no-mp$(LIB_VARIANT).rel: $(ARCH)/no-mp$(LIB_VARIANT).rel ${PROJECT_RELEASE}/lib/$(dirstamp)
+	$(INSTALL_DATA) $< ${PROJECT_RELEASE}/lib/no-mp$(LIB_VARIANT).rel
+TMPINSTALL_FILES += ${PROJECT_RELEASE}/lib/no-mp$(LIB_VARIANT).rel
+
+${PROJECT_RELEASE}/lib/no-part$(LIB_VARIANT).rel: $(ARCH)/no-part$(LIB_VARIANT).rel ${PROJECT_RELEASE}/lib/$(dirstamp)
+	$(INSTALL_DATA) $< ${PROJECT_RELEASE}/lib/no-part$(LIB_VARIANT).rel
+TMPINSTALL_FILES += ${PROJECT_RELEASE}/lib/no-part$(LIB_VARIANT).rel
+
+${PROJECT_RELEASE}/lib/no-region$(LIB_VARIANT).rel: $(ARCH)/no-region$(LIB_VARIANT).rel ${PROJECT_RELEASE}/lib/$(dirstamp)
+	$(INSTALL_DATA) $< ${PROJECT_RELEASE}/lib/no-region$(LIB_VARIANT).rel
+TMPINSTALL_FILES += ${PROJECT_RELEASE}/lib/no-region$(LIB_VARIANT).rel
+
+${PROJECT_RELEASE}/lib/no-rtmon$(LIB_VARIANT).rel: $(ARCH)/no-rtmon$(LIB_VARIANT).rel ${PROJECT_RELEASE}/lib/$(dirstamp)
+	$(INSTALL_DATA) $< ${PROJECT_RELEASE}/lib/no-rtmon$(LIB_VARIANT).rel
+TMPINSTALL_FILES += ${PROJECT_RELEASE}/lib/no-rtmon$(LIB_VARIANT).rel
+
+${PROJECT_RELEASE}/lib/no-sem$(LIB_VARIANT).rel: $(ARCH)/no-sem$(LIB_VARIANT).rel ${PROJECT_RELEASE}/lib/$(dirstamp)
+	$(INSTALL_DATA) $< ${PROJECT_RELEASE}/lib/no-sem$(LIB_VARIANT).rel
+TMPINSTALL_FILES += ${PROJECT_RELEASE}/lib/no-sem$(LIB_VARIANT).rel
+
+${PROJECT_RELEASE}/lib/no-signal$(LIB_VARIANT).rel: $(ARCH)/no-signal$(LIB_VARIANT).rel ${PROJECT_RELEASE}/lib/$(dirstamp)
+	$(INSTALL_DATA) $< ${PROJECT_RELEASE}/lib/no-signal$(LIB_VARIANT).rel
+TMPINSTALL_FILES += ${PROJECT_RELEASE}/lib/no-signal$(LIB_VARIANT).rel
+
+${PROJECT_RELEASE}/lib/no-timer$(LIB_VARIANT).rel: $(ARCH)/no-timer$(LIB_VARIANT).rel ${PROJECT_RELEASE}/lib/$(dirstamp)
+	$(INSTALL_DATA) $< ${PROJECT_RELEASE}/lib/no-timer$(LIB_VARIANT).rel
+TMPINSTALL_FILES += ${PROJECT_RELEASE}/lib/no-timer$(LIB_VARIANT).rel
 
 include $(top_srcdir)/automake/local.am
